# baseball-db

./: .gitignore  .sqlfluff  dbt_project.yml  packages.yml  pyproject.toml  ruff.toml
analyses/game-novelty/: README.md  main.py
analyses/novelty/: README.md  main.py  simplified_events.sql
baseball_db/: __init__.py  chadwick.py  constants.py  retrosheet.py  statcast.py  utils.py
models/: _sources.yml
models/1_staging/: _staging.yml  stg_chadwick_people.sql  stg_chadwick_people.yml  stg_chadwick_register.sql  stg_retrosheet_events.sql  stg_retrosheet_games.sql  stg_retrosheet_games.yml  stg_retrosheet_rosters.sql  stg_retrosheet_rosters.yml  stg_retrosheet_subs.sql  stg_statcast.sql
models/2_marts/: _marts.yml  fct_balls_in_play.sql  fct_balls_in_play.yml  fct_balls_in_plays.sql
models/core/: fact_statcast_pitches.sql  fact_statcast_pitches.yml
models/mart/: dim_people.sql  dim_people.yml  mart_balls_in_play.sql  mart_balls_in_play.yml
models/prep/: prep_balls_in_play.sql  prep_balls_in_play.yml  prep_batted_ball_features.sql  prep_batted_ball_features.yml  prep_statcast.sql  prep_statcast.yml
models/staging/: _source_config.yml  stg_chadwick_people.sql  stg_chadwick_people.yml  stg_retrosheet_ballparks.sql  stg_retrosheet_ballparks.yml  stg_retrosheet_batting.sql  stg_retrosheet_batting.yml  stg_retrosheet_discrepancies.sql  stg_retrosheet_discrepancies.yml  stg_retrosheet_ejections.sql  stg_retrosheet_ejections.yml  stg_retrosheet_events.sql  (+19 more)
scripts/: extract_load_chadwick.py  extract_load_retrosheet.py  load_statcast.py  update_statcast.sh
(+2 files in other folders)
