[project]
name = "baseball-db"
version = "0.1.0"
description = "A baseball database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11",
    "dbt-duckdb>=1.10",
    "python-dotenv>=1.2",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "sqlfluff>=4.0",
]
